--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -92,10 +92,14 @@ android {
         applicationId 'com.primecare.rider'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
+        versionCode 2
         versionName "1.0.0"
 
         buildConfigField "String", "REACT_NATIVE_RELEASE_LEVEL", "\"${findProperty('reactNativeReleaseLevel') ?: 'stable'}\""
+
+        // Read Google Maps API key from .env or use default
+        def mapsApiKey = project.findProperty("GOOGLE_MAPS_API_KEY") ?: "AIzaSyBlAOzYVavkFKdyByg8DOPJXdwYd-dsJMM"
+        manifestPlaceholders = [GOOGLE_MAPS_API_KEY: mapsApiKey]
     }
     signingConfigs {
         debug {
